Format Changes, added articles

--- a/Blogs/BlogTemplate.html
+++ b/Blogs/BlogTemplate.html
@@ -2,28 +2,26 @@
 <html>
     <body>
         <header>
-
             <nav>
-
                 <h2>Navigation</h2>
 
                 <ul>
-                    <li><a href="MainPage.html">Main Page</a></li>
+                    <li><a href="../MainPage.html">Main Page</a></li>
                     <li><a href="BlogIndex.html">Archive</a></li>
                 </ul>
-
             </nav>
-
         </header>
 
         <main>
             <article>
 
-                <title></title>
+                <title>
+
+                </title>
 
                 <p>
 
-              </p>
+                </p>
                
             </article>
 
@@ -31,8 +29,5 @@
                 By 
             </aside>
         </main>
-
     </body>
-
-
 </html>
