Uploaded manual as was having push errors on github desktop, Added article + formating

--- a/Blogs/BlogIndex.html
+++ b/Blogs/BlogIndex.html
@@ -7,7 +7,7 @@
             <h2>Navigation</h2>
                 <ul>
                     <li><a href="../MainPage.html">Main Page</a></li>
-                    <li><a href="Profile.html">Authour Profile</a></li>
+                    <li><a href="../Profile/Profile.html">Authour Profile</a></li>
                 </ul>
         </nav>
 
@@ -18,6 +18,7 @@
                 <li><a href="BabelArticle.html">Reflection on "The Library of Babel"</a></li>
                 <li><a href="BrowserWarArticle.html">Reflection on Browser wars and the reactive nature to possible problems of new technology.</a></li>
                 <li><a href="MediumArticle.html">Reflection on "Message is the medium"</a></li>
+                <li><a href="SemanticArticle.html">The Importance of Semantic Markup</a></li>
             </ol>
     </body>
 </html>
