--- a/Blogs/BlogTemplate.html
+++ b/Blogs/BlogTemplate.html
@@ -28,6 +28,16 @@
             <aside>
                 By 
             </aside>
+
+            <h2>
+                Sources
+            </h2>
+
+            <section>
+                <p>
+                    
+                </p>
+            </section>
         </main>
     </body>
 </html>
