--- a/Blogs/MediumArticle.html
+++ b/Blogs/MediumArticle.html
@@ -47,6 +47,16 @@
             <aside>
                 By 
             </aside>
+
+            <h2>
+                Sources
+            </h2>
+
+            <section>
+                <p>
+                    McLuhan, M. (1964). The medium is the message.
+                </p>
+            </section>
         </main>
     </body>
 </html>
