--- a/Blogs/BrowserWarArticle.html
+++ b/Blogs/BrowserWarArticle.html
@@ -61,7 +61,9 @@
     
                 <section>
                     <p>
-                        https://www.theringer.com/tech/2018/5/18/17362452/microsoft-antitrust-lawsuit-netscape-internet-explorer-20-years
+                        <a href="https://www.theringer.com/tech/2018/5/18/17362452/microsoft-antitrust-lawsuit-netscape-internet-explorer-20-years">
+                            https://www.theringer.com/tech/2018/5/18/17362452/microsoft-antitrust-lawsuit-netscape-internet-explorer-20-years
+                        </a> 
                     </p>
                 </section>
             </article>
