--- a/Blogs/SemanticArticle.html
+++ b/Blogs/SemanticArticle.html
@@ -57,7 +57,9 @@
 
             <section>
                 <p>
-                    https://html.com/semantic-markup
+                    <a href="https://html.com/semantic-markup">
+                        https://html.com/semantic-markup
+                    </a>
                 </p>
             </section>
         </main>
