Added Images, Buttons, profile pages, and a theory article
Changes i probably shouldve pushed earlier

--- a/Blogs/BlogIndex.html
+++ b/Blogs/BlogIndex.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="Interactive Media,Blog,Theory,Archive">
+        <meta name="revised" content="WSOA Blog Archive, 2020/03/16/">
+        <meta name="author" content="Ryan Ka Kit Leong">
+        <meta name="description" content="Archive Listing Theoretical Blog Posts">
+        <meta name="viewport" content="width=device-width", initial-scale=1>
+        <meta http-equiv="refresh" content="30">
+        <title>Blog Post Archive.</title>                 
+    </head>
     <body>
-        <h1>Archive</h1>
+        <h1>
+            Blog Post Archive
+        </h1>
         
         <nav>
-            <h2>Navigation</h2>
-                <ul>
-                    <li><a href="../MainPage.html">Main Page</a></li>
-                    <li><a href="../Profile/Profile.html">Authour Profile</a></li>
-                </ul>
+            <h2>
+                Navigation
+            </h2>
+
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="BlogMainPage.html">Theory Blog Posts</a></li>
+                <li><a href="BlogIndex.html">Theory Archive</a></li>
+                <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
+                <li><a href="../Hobby/index.html">Hobby Archive</a></li>
+                <li><a href="../Profile/index.html">Authour Profile</a></li>
+            </ul>
         </nav>
 
         <h2>
@@ -19,6 +38,7 @@
                 <li><a href="BrowserWarArticle.html">Reflection on Browser wars and the reactive nature to possible problems of new technology.</a></li>
                 <li><a href="MediumArticle.html">Reflection on "Message is the medium"</a></li>
                 <li><a href="SemanticArticle.html">The Importance of Semantic Markup</a></li>
+                <li><a href="HypertextArticle.html">Hypertext and its influence on the World Wide Web</a></li>
             </ol>
     </body>
 </html>
