--- a/Blogs/SemanticArticle.html
+++ b/Blogs/SemanticArticle.html
@@ -1,67 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="Interactive Media,Blog,Theory,Semantic,Markup, semantic-markup">
+        <meta name="revised" content="WSOA Blog Semantic Markup Article, 2020/03/16/">
+        <meta name="author" content="Ryan Ka Kit Leong">
+        <meta name="description" content="An article explaining semantic markup and discussing its importance">
+        <meta name="viewport" content="width=device-width", initial-scale=1>
+        <meta http-equiv="refresh" content="30">
+        <title>The importance of Semantic Markup.</title>                 
+    </head>
     <body>
-        <header>
+        <header>  
+            <h1>
+                The importance of Semantic Markup
+            </h1>
+
             <nav>
-                <h2>Navigation</h2>
+                <h2>
+                    Navigation
+                </h2>
 
                 <ul>
-                    <li><a href="../MainPage.html">Main Page</a></li>
-                    <li><a href="BlogIndex.html">Archive</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="BlogMainPage.html">Theory Blog Posts</a></li>
+                    <li><a href="BlogIndex.html">Theory Archive</a></li>
+                    <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
+                    <li><a href="../Hobby/index.html">Hobby Archive</a></li>
+                    <li><a href="../Profile/index.html">Authour Profile</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <article>
+            <article
+                id="Semantic Markup Article"
+                data-index-number="4"
+                data-category="Theory Blog Posts"
+                data-author="Ryan Ka Kit Leong"
+                data-time-published="15:47 pm"
+                data-date-published="15 March 2020"
+                    >
+                <p>
+                    Semantic Markup is basically a language that makes use of tags in order to structure html pages.
+                    Each tag is unique and conveys different types of information such as hierarchy or importance within the page.
+                    It also assists in communicating information about the web page to other machines or programs like bots.
+                </p>
 
-                <title>
-                        The importance of Semantic Markup
-                </title>
+                <p>
+                    Semantic markup is important as it provides a standardised language in which one can read and assess the 
+                    information and structure of a html web page. This standardisation helps both human and bot users alike as it
+                    creates a common ground for understanding a web pages elements, making its information more accessible.
+                    It also becomes very efficient in navigating and gathering
+                    the vast amount of information found on the web through automated data gathering via bots in search engines.
+                    This increase in accessibility also improves the rate of development regarding the internet and web services.
+                </p>
 
-                <section>
-                    <p>
-                        Semantic Markup is basically a language that makes use of tags in order to structure html pages.
-                        Each tag is unique and conveys different types of information such as hierarchy or importance within the page.
-                        It also assists in communicating information about the web page to other machines or programs like bots.
-                    </p>
-                </section>
-                
-                <section>
-                    <p>
-                        Semantic markup is important as it provides a standardised language in which one can read and assess the 
-                        information and structure of a html web page. This standardisation helps both human and bot users alike as it
-                        creates a common ground for understanding a web pages elements, making its information more accessible.
-                        It also becomes very efficient in navigating and gathering
-                        the vast amount of information found on the web through automated data gathering via bots in search engines.
-                        This increase in accessibility also improves the rate of development regarding the internet and web services.
-                    </p>
-                </section>
-
-                <section>
-                    <p>
-                        In summary, Semantic Markup is a language that helps both people and machines read information contained in 
-                        a webpage as well as how it's structured. This standardisation makes a web page more accessible and therefore 
-                        improves the efficiency of the web as well as the development of web services.
-                    </p>
-                </section>
+                <p>
+                    In summary, Semantic Markup is a language that helps both people and machines read information contained in 
+                    a webpage as well as how it's structured. This standardisation makes a web page more accessible and therefore 
+                    improves the efficiency of the web as well as the development of web services.
+                </p>
             </article>
 
             <aside>
-                By 
+                By Ryan Ka Kit Leong
             </aside>
 
             <h2>
                 Sources
             </h2>
 
-            <section>
-                <p>
+            <ol>
+                <li>
                     <a href="https://html.com/semantic-markup">
                         https://html.com/semantic-markup
                     </a>
-                </p>
-            </section>
+                </li>
+            </ol>
         </main>
     </body>
 </html>
