--- a/Profile/Fake.html
+++ b/Profile/Fake.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="keywords" content="Interactive Media,Blog,profile,Designer">
+        <meta name="keywords" content="Interactive Media,Blog,profile,Hobbyist">
         <meta name="revised" content="WSOA Creative Character Profile, 2020/03/16/">
-        <meta name="author" content="Ryan Ka Kit Leong">
+        <meta name="author" content="">
         <meta name="description" content="A user profile">
         <meta name="viewport" content="width=device-width", initial-scale=1>
         <meta http-equiv="refresh" content="30">
-        <title>User Profile Ryan</title>                 
+        <title>User Profile name</title>                 
     </head>
     <body>
         <h1>
@@ -41,12 +41,12 @@
                     <tbody>
                         <tr>
                             <td>Name: </td>
-                            <td>Ryan Leong</td>
+                            <td>Ka Kit Leng</td>
                         </tr>
 
                         <tr>
                             <td>Role: </td>
-                            <td>Website designer</td>
+                            <td>Blogger</td>
                         </tr>
                     </tbody>
                 </table>
@@ -54,13 +54,7 @@
                 <h3>Posts</h3>
 
                 <p>
-                    <ul>
-                        <li><a href="../Blogs/BabelArticle.html">Reflection on "The Library of Babel"</a></li>
-                        <li><a href="../Blogs/BrowserWarArticle.html">Reflection on Browser wars and the reactive nature to possible problems of new technology.</a></li>
-                        <li><a href="../Blogs/MediumArticle.html">Reflection on "Message is the medium"</a></li>
-                        <li><a href="../Blogs/SemanticArticle.html">The Importance of Semantic Markup</a></li>
-                        <li><a href="../Blogs/HypertextArticle.html">Hypertext and its influence on the World Wide Web</a></li>
-                    </ul>
+                    <ul></ul>
                 </p>
             </article>            
         </main>
