--- a/Blogs/BlogTemplate.html
+++ b/Blogs/BlogTemplate.html
@@ -2,22 +2,38 @@
 <html>
     <body>
         <header>
+            <h1>
+                Theory Blog post 
+            </h1>
+
             <nav>
                 <h2>Navigation</h2>
 
                 <ul>
-                    <li><a href="../MainPage.html">Main Page</a></li>
-                    <li><a href="BlogIndex.html">Archive</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="BlogMainPage.html">Theory Blog Posts</a></li>
+                    <li><a href="BlogIndex.html">Theory Archive</a></li>
+                    <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
+                    <li><a href="../Hobby/index.html">Hobby Archive</a></li>
+                    <li><a href="../Profile/index.html">Authour Profile</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <article>
+            <article
+                id=""
+                data-index-number=""
+                data-category=""
+                data-author=""
+                data-time-published=""
+                data-date-published=""
+                    >
 
                 <title>
-
+                    
                 </title>
+
 
                 <p>
 
@@ -33,11 +49,9 @@
                 Sources
             </h2>
 
-            <section>
-                <p>
-                    
-                </p>
-            </section>
+            <ol>
+                <li></li> 
+            </ol>
         </main>
     </body>
 </html>
