Testing URL Link changes
Having problems navigating github pages as pages are not being found, Changing URL Links to match file structure

--- a/Index.html
+++ b/Index.html
@@ -55,8 +55,8 @@
             </p>
 
             <p>
-                <a href="/Blogs/BlogMainPage.html"><button>Theory</button></a>
-                <a href="/Hobby/MainPage.html"><button>Hobby</button></a>
+                <a href="WSOA3028A_1706969/Blogs/BlogMainPage.html"><button>Theory</button></a>
+                <a href="WSOA3028A_1706969/Hobby/MainPage.html"><button>Hobby</button></a>
             </p>
             
             <p>
