Changed URL links to reference current directory

--- a/Blogs/BlogIndex.html
+++ b/Blogs/BlogIndex.html
@@ -21,7 +21,7 @@
             </h2>
 
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Index.html">Home</a></li>
                 <li><a href="BlogMainPage.html">Theory Blog Posts</a></li>
                 <li><a href="BlogIndex.html">Theory Archive</a></li>
                 <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
