--- a/Index.html
+++ b/Index.html
@@ -25,12 +25,12 @@
             </h2>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
-                <li><a href="/Blogs/BlogIndex.html">Theory Archive</a></li>
-                <li><a href="/Hobby/MainPage.html">Hobby Blog Posts</a></li>
-                <li><a href="/Hobby/index.html">Hobby Archive</a></li>
-                <li><a href="/Profile/index.html">Profiles</a></li>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="./Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
+                <li><a href="./Blogs/BlogIndex.html">Theory Archive</a></li>
+                <li><a href="./Hobby/MainPage.html">Hobby Blog Posts</a></li>
+                <li><a href="./Hobby/index.html">Hobby Archive</a></li>
+                <li><a href="./Profile/index.html">Profiles</a></li>
             </ul>
         </nav>
 
@@ -55,8 +55,8 @@
             </p>
 
             <p>
-                <a href="/Blogs/BlogMainPage.html"><button>Theory</button></a>
-                <a href="/Hobby/MainPage.html"><button>Hobby</button></a>
+                <a href="./Blogs/BlogMainPage.html"><button>Theory</button></a>
+                <a href="./Hobby/MainPage.html"><button>Hobby</button></a>
             </p>
             
             <p>
@@ -67,9 +67,9 @@
         </section>
 
         <Section id="GallerySources">
-            <img data-src="/Images/Crossbone.jpeg" alt="" width="800" height="400">
-            <img data-src="/Images/MK2.jpeg" alt="" width="800" height="400">
-            <img data-src="/Images/Zeta.jpeg" alt="" width="800" height="400">
+            <img data-src="./Images/Crossbone.jpeg" alt="" width="800" height="400">
+            <img data-src="./Images/MK2.jpeg" alt="" width="800" height="400">
+            <img data-src="./Images/Zeta.jpeg" alt="" width="800" height="400">
         </Section>
     </body>
 </html>
