--- a/Blogs/BabelArticle.html
+++ b/Blogs/BabelArticle.html
@@ -22,9 +22,9 @@
                 </h2>
 
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="BlogMainPage.html">Theory Blog Posts</a></li>
-                    <li><a href="BlogIndex.html">Theory Archive</a></li>
+                    <li><a href="../Index.html">Home</a></li>
+                    <li><a href=".BlogMainPage.html">Theory Blog Posts</a></li>
+                    <li><a href=".BlogIndex.html">Theory Archive</a></li>
                     <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
                     <li><a href="../Hobby/index.html">Hobby Archive</a></li>
                     <li><a href="../Profile/index.html">Authour Profile</a></li>
