--- a/Profile/index.html
+++ b/Profile/index.html
@@ -19,7 +19,7 @@
             </h2>
 
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Index.html">Home</a></li>
                 <li><a href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
                 <li><a href="../Blogs/BlogIndex.html">Theory Archive</a></li>
                 <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
