Corrected some page and URL errors
The fixes worked, now just applying to some places i forgot about.

--- a/Hobby/MainPage.html
+++ b/Hobby/MainPage.html
@@ -21,7 +21,7 @@
             </h2>
 
             <ul>
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Index.html">Home</a></li>
                 <li><a href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
                 <li><a href="../Blogs/BlogIndex.html">Theory Archive</a></li>
                 <li><a href="index.html">Hobby Archive</a></li>
