Fixing more URL Links

--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         </section>
 
         <section id="Imported Scripts">
-            <script src="/Scripts/HomePageFunctions.js"></script>
+            <script src="./Scripts/HomePageFunctions.js"></script>
         </section>
     </head>
     <body>
