--- a/Hobby/Explain.html
+++ b/Hobby/Explain.html
@@ -23,8 +23,8 @@
 
                 <ul>
                     <li><a href="../Index.html">Home</a></li>
-                    <li><a href="../BlogMainPage.html">Theory Blog Posts</a></li>
-                    <li><a href="../BlogIndex.html">Theory Archive</a></li>
+                    <li><a href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
+                    <li><a href="../Blogs/BlogIndex.html">Theory Archive</a></li>
                     <li><a href="MainPage.html">Hobby Blog Posts</a></li>
                     <li><a href="index.html">Hobby Archive</a></li>
                     <li><a href="../Profile/index.html">Authour Profile</a></li>
