Updated Indexing Article Attributes

--- a/Blogs/BlogMainPage.html
+++ b/Blogs/BlogMainPage.html
@@ -42,7 +42,7 @@
 
             <article
                 id="Reflection on The Library of Babel Summary"
-                data-index-number="1"
+                data-index-number="TS1"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:23 pm"
@@ -69,7 +69,7 @@
 
             <article
                 id="Reflection on Browser Wars Summary"
-                data-index-number="2"
+                data-index-number="TS2"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:25 pm"
@@ -101,7 +101,7 @@
 
             <article
                 id="Reflection on Message is the medium Summary"
-                data-index-number="3"
+                data-index-number="TS3"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:26 pm"
@@ -126,7 +126,7 @@
 
             <article
                 id="Semantic Markup Summary"
-                data-index-number="4"
+                data-index-number="TS4"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:47 pm"
@@ -155,7 +155,7 @@
             
             <article
                 id="Hypertext influence Summary"
-                data-index-number="5"
+                data-index-number="TS5"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:48 pm"
