--- a/Blogs/BrowserWarArticle.html
+++ b/Blogs/BrowserWarArticle.html
@@ -35,7 +35,7 @@
         <main>
             <article
                 id="Reflection on Browser Wars Article"
-                data-index-number="2"
+                data-index-number="TA2"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:25 pm"
