--- a/Blogs/MediumArticle.html
+++ b/Blogs/MediumArticle.html
@@ -35,7 +35,7 @@
         <main>
             <article
                 id="Reflection on Message is the medium Article"
-                data-index-number="3"
+                data-index-number="TA3"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:26 pm"
