--- a/Blogs/SemanticArticle.html
+++ b/Blogs/SemanticArticle.html
@@ -35,7 +35,7 @@
         <main>
             <article
                 id="Semantic Markup Article"
-                data-index-number="4"
+                data-index-number="TA4"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:47 pm"
