--- a/Hobby/MainPage.html
+++ b/Hobby/MainPage.html
@@ -36,7 +36,7 @@
 
         <article
                 id="Current state"
-                data-index-number="H1"
+                data-index-number="HS1"
                 data-category="Hobby Blog Posts"
                 data-author="Ka Kit Leng"
                 data-time-published="11:26 am"
