--- a/Blogs/BabelArticle.html
+++ b/Blogs/BabelArticle.html
@@ -35,7 +35,7 @@
         <main>
             <article
                 id="Reflection on The Library of Babel Article"
-                data-index-number="1"
+                data-index-number="TA1"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:23 pm"
