--- a/Blogs/HypertextArticle.html
+++ b/Blogs/HypertextArticle.html
@@ -34,7 +34,7 @@
         <main>
             <article
                 id="Hypertext influence Article"
-                data-index-number="5"
+                data-index-number="TA5"
                 data-category="Theory Blog Posts"
                 data-author="Ryan Ka Kit Leong"
                 data-time-published="15:48 pm"
