correcting more hyperlinks, Added Images, Added Character Post

--- a/Blogs/BlogMainPage.html
+++ b/Blogs/BlogMainPage.html
@@ -23,15 +23,17 @@
                 <h2>
                     Navigation
                 </h2>
-                
-                <ol>
+
+                <ul>
                     <li><a href="../Index.html">Home</a></li>
-                    <li><a href="BlogMainPage.html">Theory Blog Posts</a></li>
-                    <li><a href="BlogIndex.html">Theory Archive</a></li>
+                    <li><a href="./BlogMainPage.html">Theory Blog Posts</a></li>
+                    <li><a href="./BlogIndex.html">Theory Archive</a></li>
                     <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
                     <li><a href="../Hobby/index.html">Hobby Archive</a></li>
                     <li><a href="../Profile/index.html">Authour Profile</a></li>
-                </ol>
+                </ul>
+
+                <button name="Back Button" onclick="history.back()">Back</button>
             </nav>
         </header>
 
