--- a/Hobby/Explain.html
+++ b/Hobby/Explain.html
@@ -5,7 +5,7 @@
         <meta name="keywords" content="Interactive Media,Blog,Hobby,Explain">
         <meta name="revised" content="WSOA Blog Hobby Current state , 2020/03/20/">
         <meta name="author" content="Ryan Ka Kit Leong">
-        <meta name="description" content="A case study on Browser Wars between Netscape and Microsoft to comment on the effects of technological developments without full understanding of possible dangers">
+        <meta name="description" content="Post explaining inactivity">
         <meta name="viewport" content="width=device-width", initial-scale=1>
         <meta http-equiv="refresh" content="30">
         <title>Reflection on Browser wars and the reactive nature to possible problems of new technology.</title>                 
@@ -25,10 +25,12 @@
                     <li><a href="../Index.html">Home</a></li>
                     <li><a href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
                     <li><a href="../Blogs/BlogIndex.html">Theory Archive</a></li>
-                    <li><a href="MainPage.html">Hobby Blog Posts</a></li>
-                    <li><a href="index.html">Hobby Archive</a></li>
+                    <li><a href="./MainPage.html">Hobby Blog Posts</a></li>
+                    <li><a href="./index.html">Hobby Archive</a></li>
                     <li><a href="../Profile/index.html">Authour Profile</a></li>
                 </ul>
+                
+                <button name="Back Button" onclick="history.back()">Back</button>
             </nav>
         </header>
 
