--- a/Index.html
+++ b/Index.html
@@ -25,13 +25,15 @@
             </h2>
 
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="./Index.html">Home</a></li>
                 <li><a href="./Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
                 <li><a href="./Blogs/BlogIndex.html">Theory Archive</a></li>
                 <li><a href="./Hobby/MainPage.html">Hobby Blog Posts</a></li>
                 <li><a href="./Hobby/index.html">Hobby Archive</a></li>
                 <li><a href="./Profile/index.html">Profiles</a></li>
             </ul>
+            
+            <button name="Back Button" onclick="history.back()">Back</button>
         </nav>
 
         <h2 id="About">
