--- a/Profile/index.html
+++ b/Profile/index.html
@@ -14,9 +14,7 @@
     <body>
         <h1>Blog Post Archive</h1>
         <nav>
-            <h2>
-                Navigation
-            </h2>
+            <h2>Navigation</h2>
 
             <ul>
                 <li><a href="../Index.html">Home</a></li>
@@ -24,8 +22,11 @@
                 <li><a href="../Blogs/BlogIndex.html">Theory Archive</a></li>
                 <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
                 <li><a href="../Hobby/index.html">Hobby Archive</a></li>
-                <li><a href="index.html">Profiles</a></li>
+                <li><a href="./index.html">Authour Profile</a></li>
+
             </ul>
+            
+            <button name="Back Button" onclick="history.back()">Back</button>
         </nav>
 
         <h2>
