--- a/Blogs/MediumArticle.html
+++ b/Blogs/MediumArticle.html
@@ -17,18 +17,20 @@
             </h1>
 
             <nav>
-                <h2>                    
+                <h2>
                     Navigation
                 </h2>
-                    
+
                 <ul>
                     <li><a href="../Index.html">Home</a></li>
-                    <li><a href="BlogMainPage.html">Theory Blog Posts</a></li>
-                    <li><a href="BlogIndex.html">Theory Archive</a></li>
+                    <li><a href="./BlogMainPage.html">Theory Blog Posts</a></li>
+                    <li><a href="./BlogIndex.html">Theory Archive</a></li>
                     <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
                     <li><a href="../Hobby/index.html">Hobby Archive</a></li>
                     <li><a href="../Profile/index.html">Authour Profile</a></li>
                 </ul>
+
+                <button name="Back Button" onclick="history.back()">Back</button>
             </nav>
         </header>
 
