--- a/Profile/Profile.html
+++ b/Profile/Profile.html
@@ -25,8 +25,11 @@
                     <li><a href="../Blogs/BlogIndex.html">Theory Archive</a></li>
                     <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
                     <li><a href="../Hobby/index.html">Hobby Archive</a></li>
-                    <li><a href="index.html">Authour Profile</a></li>
+                    <li><a href="./index.html">Authour Profile</a></li>
+
                 </ul>
+
+                <button name="Back Button" onclick="history.back()">Back</button>
             </nav>
         </header>
 
