Updated index and mainpage with blog entries and links

--- a/Hobby/index.html
+++ b/Hobby/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="Interactive Media,Blog,Hobby,Gundam,Archive, Gunpla">
-        <meta name="revised" content="WSOA Blog Hobby Archive, 2020/03/17/">
+        <meta name="revised" content="WSOA Blog Hobby Archive, 2020/03/29/">
         <meta name="author" content="Ryan Ka Kit Leong">
         <meta name="description" content="Archive of Hobby Blog Posts">
         <meta name="viewport" content="width=device-width", initial-scale=1>
@@ -37,6 +37,7 @@
         </h2>
             <ol>
                 <li><a href="Explain.html">Current state of the blog</a></li>
+                <li><a href="CrossboneReview.html">HG Crossbone Gundam Review</a></li>
             </ol>
     </body>
 </html>
