--- a/Blogs/BlogTemplate.html
+++ b/Blogs/BlogTemplate.html
@@ -6,16 +6,20 @@
                 Theory Blog post 
             </h1>
 
-            <nav>
-                <h2>Navigation</h2>
-
+            <nav id="Navigation Bar">
+                <p class="NavTitle">
+                    Navigation
+                </p>
+    
                 <ul>
-                    <li><a href="../Index.html">Home</a></li>
-                    <li><a href="BlogMainPage.html">Theory Blog Posts</a></li>
-                    <li><a href="BlogIndex.html">Theory Archive</a></li>
-                    <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
-                    <li><a href="../Hobby/index.html">Hobby Archive</a></li>
-                    <li><a href="../Profile/index.html">Authour Profile</a></li>
+                    <li><a class="active" href="../Index.html">Home</a></li>
+                    <li><a class="active" href="./BlogMainPage.html">Theory Blog Posts</a></li>
+                    <li><a class="active" href="./BlogIndex.html">Theory Archive</a></li>
+                    <li><a class="active" href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
+                    <li><a class="active" href="../Hobby/index.html">Hobby Archive</a></li>
+                    <li><a class="active" href="../Profile/index.html">Profiles</a></li>
+    
+                    <li><button name="Back Button" onclick="history.back()">Back</button></li>
                 </ul>
             </nav>
         </header>
