--- a/Blogs/BrowserWarArticle.html
+++ b/Blogs/BrowserWarArticle.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="keywords" content="Interactive Media,Blog,Theory,Browser Wars">
-        <meta name="revised" content="WSOA Blog Browser War case study, 2020/03/16/">
-        <meta name="author" content="Ryan Ka Kit Leong">
-        <meta name="description" content="A case study on Browser Wars between Netscape and Microsoft to comment on the effects of technological developments without full understanding of possible dangers">
-        <meta name="viewport" content="width=device-width", initial-scale=1>
-        <meta http-equiv="refresh" content="30">
-        <title>Reflection on Browser wars and the reactive nature to possible problems of new technology.</title>                 
+    <head>        
+        <section id="meta data">
+            <meta charset="UTF-8">
+            <meta name="keywords" content="Interactive Media,Blog,Theory,Browser Wars">
+            <meta name="revised" content="WSOA Blog Browser War case study, 2020/03/16/">
+            <meta name="author" content="Ryan Ka Kit Leong">
+            <meta name="description" content="A case study on Browser Wars between Netscape and Microsoft to comment on the effects of technological developments without full understanding of possible dangers">
+            <meta name="viewport" content="width=device-width", initial-scale=1>
+            <meta http-equiv="refresh" content="30">
+            <title>Reflection on Browser wars and the reactive nature to possible problems of new technology.</title> 
+        </section>
+
+        <section id="External Files">
+            <link rel="stylesheet" href="../Styling/style.css" title="Style Guide" type="text/css">
+        </section>
     </head>
+
     <body>
         <header>
             <h1>
                 Reflection on Browser wars and the reactive nature to possible problems of new technology.
             </h1>
 
-            <nav>
-                <h2>
+            <nav id="Navigation Bar">
+                <p class="NavTitle">
                     Navigation
-                </h2>
-
+                </p>
+    
                 <ul>
-                    <li><a href="../Index.html">Home</a></li>
-                    <li><a href="./BlogMainPage.html">Theory Blog Posts</a></li>
-                    <li><a href="./BlogIndex.html">Theory Archive</a></li>
-                    <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
-                    <li><a href="../Hobby/index.html">Hobby Archive</a></li>
-                    <li><a href="../Profile/index.html">Authour Profile</a></li>
+                    <li><a class="active" href="../Index.html">Home</a></li>
+                    <li><a class="active" href="./BlogMainPage.html">Theory Blog Posts</a></li>
+                    <li><a class="active" href="./BlogIndex.html">Theory Archive</a></li>
+                    <li><a class="active" href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
+                    <li><a class="active" href="../Hobby/index.html">Hobby Archive</a></li>
+                    <li><a class="active" href="../Profile/index.html">Profiles</a></li>
+    
+                    <li><button name="Back Button" onclick="history.back()">Back</button></li>
                 </ul>
-
-                <button name="Back Button" onclick="history.back()">Back</button>
             </nav>
         </header>
 
         <main>
             <article
+                class="acontent"
                 id="Reflection on Browser Wars Article"
                 data-index-number="TA2"
                 data-category="Theory Blog Posts"
