--- a/Hobby/index.html
+++ b/Hobby/index.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="keywords" content="Interactive Media,Blog,Hobby,Gundam,Archive, Gunpla">
-        <meta name="revised" content="WSOA Blog Hobby Archive, 2020/03/29/">
-        <meta name="author" content="Ryan Ka Kit Leong">
-        <meta name="description" content="Archive of Hobby Blog Posts">
-        <meta name="viewport" content="width=device-width", initial-scale=1>
-        <meta http-equiv="refresh" content="30">
-        <title>Hobby Blog Post Archive</title>                 
+        <section id="meta data">
+            <meta charset="UTF-8">
+            <meta name="keywords" content="Interactive Media,Blog,Hobby,Gundam,Archive, Gunpla">
+            <meta name="revised" content="WSOA Blog Hobby Archive, 2020/03/29/">
+            <meta name="author" content="Ryan Ka Kit Leong">
+            <meta name="description" content="Archive of Hobby Blog Posts">
+            <meta name="viewport" content="width=device-width", initial-scale=1>
+            <meta http-equiv="refresh" content="30">
+            <title>Hobby Blog Post Archive</title>
+        </section>
+
+        <section id="External Files">
+            <link rel="stylesheet" href="../Styling/style.css" title="Style Guide" type="text/css">
+        </section>
     </head>
     <body>
         <h1>
             Hobby Blog Post Archive
         </h1>
         
-        <nav>
-            <h2>
+        <nav id="Navigation Bar">
+            <p class="NavTitle">
                 Navigation
-            </h2>
+            </p>
 
             <ul>
-                <li><a href="../Index.html">Home</a></li>
-                <li><a href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
-                <li><a href="../Blogs/BlogIndex.html">Theory Archive</a></li>
-                <li><a href="./MainPage.html">Hobby Blog Posts</a></li>
-                <li><a href="./index.html">Hobby Archive</a></li>
-                <li><a href="../Profile/index.html">Authour Profile</a></li>
+                <li><a class="active" href="../Index.html">Home</a></li>
+                <li><a class="active" href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
+                <li><a class="active" href="../Blogs/BlogIndex.html">Theory Archive</a></li>
+                <li><a class="active" href="./MainPage.html">Hobby Blog Posts</a></li>
+                <li><a class="active" href="./index.html">Hobby Archive</a></li>
+                <li><a class="active" href="../Profile/index.html">Profiles</a></li>
+
+                <li><button name="Back Button" onclick="history.back()">Back</button></li>
             </ul>
-            
-            <button name="Back Button" onclick="history.back()">Back</button>
         </nav>
 
         <h2>
             Posts
         </h2>
-            <ol>
-                <li><a href="Explain.html">Current state of the blog</a></li>
-                <li><a href="CrossboneReview.html">HG Crossbone Gundam Review</a></li>
-            </ol>
+
+        <ol>
+            <li><a href="Explain.html">Current state of the blog</a></li>
+            <li><a href="CrossboneReview.html">HG Crossbone Gundam Review</a></li>
+        </ol>
     </body>
 </html>
