--- a/Profile/index.html
+++ b/Profile/index.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="keywords" content="Interactive Media,Blog,profile,Index">
-        <meta name="revised" content="WSOA Creative Character Profile Index, 2020/03/16/">
-        <meta name="author" content="Ryan Ka Kit Leong">
-        <meta name="description" content="A user profile Index">
-        <meta name="viewport" content="width=device-width", initial-scale=1>
-        <meta http-equiv="refresh" content="30">
-        <title>User Profile Ryan</title>                 
+    <head>    
+        <section id="meta data">
+            <meta charset="UTF-8">
+            <meta name="keywords" content="Interactive Media,Blog,profile,Index">
+            <meta name="revised" content="WSOA Creative Character Profile Index, 2020/03/16/">
+            <meta name="author" content="Ryan Ka Kit Leong">
+            <meta name="description" content="A user profile Index">
+            <meta name="viewport" content="width=device-width", initial-scale=1>
+            <meta http-equiv="refresh" content="30">
+            <title>User Profile Ryan</title>   
+        </section>
+
+        <section id="External Files">
+            <link rel="stylesheet" href="/./Styling/style.css" title="Style Guide" type="text/css">
+        </section>
     </head>
 
     <body>
         <h1>Blog Post Archive</h1>
-        <nav>
-            <h2>Navigation</h2>
+        
+        <nav id="Navigation Bar">
+            <p class="NavTitle">
+                Navigation
+            </p>
 
             <ul>
-                <li><a href="../Index.html">Home</a></li>
-                <li><a href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
-                <li><a href="../Blogs/BlogIndex.html">Theory Archive</a></li>
-                <li><a href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
-                <li><a href="../Hobby/index.html">Hobby Archive</a></li>
-                <li><a href="./index.html">Authour Profile</a></li>
+                <li><a class="active" href="../Index.html">Home</a></li>
+                <li><a class="active" href="../Blogs/BlogMainPage.html">Theory Blog Posts</a></li>
+                <li><a class="active" href="../Blogs/BlogIndex.html">Theory Archive</a></li>
+                <li><a class="active" href="../Hobby/MainPage.html">Hobby Blog Posts</a></li>
+                <li><a class="active" href="../Hobby/index.html">Hobby Archive</a></li>
+                <li><a class="active" href="./index.html">Profiles</a></li>
 
+                <li><button name="Back Button" onclick="history.back()">Back</button></li>
             </ul>
-            
-            <button name="Back Button" onclick="history.back()">Back</button>
         </nav>
 
         <h2>
