Added wireframes and blogpost
Added 2 posts in the theory section
This includes wireframes and a blogpost on Online learning in South Africa

--- a/Blogs/BlogIndex.html
+++ b/Blogs/BlogIndex.html
@@ -49,6 +49,8 @@
                 <li><a href="MediumArticle.html">Reflection on "Message is the medium"</a></li>
                 <li><a href="SemanticArticle.html">The Importance of Semantic Markup</a></li>
                 <li><a href="HypertextArticle.html">Hypertext and its influence on the World Wide Web</a></li>
+                <li><a href="AlternativeLearningArticle.html">Online Learning in South Africa</a></li>
+                <li><a href="WireFrames.html">WireFrames</a></li>
             </ol>
     </body>
 </html>
