--- a/Blogs/BlogMainPage.html
+++ b/Blogs/BlogMainPage.html
@@ -197,6 +197,65 @@
                     <a href="HypertextArticle.html">Read Full Article</a>
                 </aside>
             </article>
+
+            <article
+                class="acontent"
+                id="Hypertext influence Summary"
+                data-index-number="TS6"
+                data-category="Theory Blog Posts"
+                data-author="Ryan Ka Kit Leong"
+                data-time-published="16:14pm"
+                data-date-published="26 April 2020"
+                >
+
+                <h3>
+                    Online Learning in South Africa
+                </h3>
+
+                <p>
+                    Online learning presents many opportunities for higher education and can overcome geographical problems.
+                    However there are a number of limitations that this medium faces here in South Africa.
+                    <br>
+                    This article will discusses how these problems affect the accessibility of online learning as well as                     </aside>
+                    the available technologies used in online learning    
+                </p>
+
+                <aside>
+                    by Ryan Ka Kit Leong
+
+                    <br>
+
+                    <a href="AlternativeLearningArticle.html">Read Full Article</a>
+                </aside>
+            </article>
+
+            <article
+                class="acontent"
+                id="Hypertext influence Summary"
+                data-index-number="WS2"
+                data-category="Theory Blog Posts"
+                data-author="Ryan Ka Kit Leong"
+                data-time-published="16:14pm"
+                data-date-published="26 April 2020"
+                >
+
+                <h3>
+                    Wire Frames
+                </h3>
+
+                <p>
+                    This post show cases a number of wire frame drafts that will be used for this website
+                </p>
+
+                <aside>
+                    by Ryan Ka Kit Leong
+
+                    <br>
+
+                    <a href="WireFrames.html">Read Full Article</a>
+                </aside>
+
+            </article>    
         </main>
     </body>
 </html>
