--- a/Hobby/CrossboneReview.html
+++ b/Hobby/CrossboneReview.html
@@ -70,10 +70,14 @@
                     Its array of weapons also gives a lot of options to play around with when deciding on poses for display.       
                 </p>
                 
-                <img src="../Images/CrossboneWeapons.jpeg" alt="Image of all the weapons that came with the Crossbone Gunda," 
+                <figure>
+                    <img src="../Images/CrossboneWeapons.jpeg" alt="Image of all the weapons that came with the Crossbone Gunda," 
                     width="400" height="200"
-                    title="Crossbone Weapons"
                     >
+
+                    <figcaption>Crossbone Gundams Weapons</figcaption>
+                </figure>
+                
 
                 <img src="../Images/CrossboneDisplay1.jpeg" alt="An Image displaying the Crossbone gundam with a set of weapons" 
                     width="400" height="200"
