--- a/Index.html
+++ b/Index.html
@@ -21,7 +21,7 @@
         </section>
     </head>
     <body>
-        <h1>Blog Main Page</h1>
+        <h1>Student Weeb Alliance</h1>
         
         <nav id="Navigation Bar">
             <p class="NavTitle">
